Reworked announcement copy and fixed dogear styling to obscure it when overlapping. Removed type attributes from script tags after reading crockford.com all night.
Committing all drafts and early multi-issue JS for move to Git!

--- a/css/blocks/dog_ear.css
+++ b/css/blocks/dog_ear.css
@@ -12,8 +12,9 @@
 	-webkit-box-shadow:-6px 5px 7px rgba(0,0,0,0.5); -moz-box-shadow:-6px 5px 7px rgba(0,0,0,0.5);
 }
 .dog_ear.right .page_fold {
+	z-index:2;
 	right:-20px; top:57px;
-	width:160px; height:0;
+	width:155px; height:0;
 	border:solid #eee; border-width:5px 0 0;
 	-webkit-box-shadow:0 -6px 16px rgba(0,0,0,0.5); -moz-box-shadow:0 -5px 20px rgba(0,0,0,0.5);
 	-webkit-transform:rotate(45deg); -moz-transform:rotate(45deg);
